# clipboard

./: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: test.yml
_bmad-output/: architecture.md  automation-summary-epic-1.md  bmm-workflow-status.yaml  gate-decision-epic-1.md  prd.md  project-context.md  spike-nspanel-validation.md  test-design-epic-1.md  test-design-system.md  test-review-epic-1.md  traceability-matrix-epic-1.md
_bmad-output/implementation-artifacts/: 1-1-nspanel-floating-window.md  1-4-zustand-state-management-migration.md  2-1-clipboard-listening-and-content-capture.md  2-2-sqlite-data-persistence.md  devlog-story-1.1-1.3.md  epic-1-retro-2025-12-27.md  sprint-status.yaml  test-design-epic-1.md  test-design-epic-2.md
_bmad-output/project-planning-artifacts/: architecture.md  epics.md  (+3 more)
docs/: architecture.md  ci-secrets-checklist.md  ci.md  component-inventory.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
macpaste-ui/: App.tsx  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  utils.ts
scripts/: burn-in.sh  ci-local.sh  test-changed.sh
src/: App.tsx  constants.ts  index.css  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_clipboard_items.sql
src-tauri/src/: lib.rs  main.rs  panel.rs
src-tauri/src/commands/: app.rs  mod.rs  window.rs
tests/: README.md
(+33 files in other folders)
