[package]
name = "macpaste"
version = "0.1.0"
description = "A macOS Clipboard Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "macpaste_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-clipboard-x = "2.0.1"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = "0.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
